--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "aiomysql>=0.2.0",
     "anthropic>=0.51.0",
     "mcp[cli]>=1.8.0",
     "prompt-toolkit>=3.0.51",
