--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,4 +17,5 @@ dependencies = [
     "pytesseract>=0.3.13",
     "python-dateutil>=2.9.0.post0",
     "python-dotenv>=1.1.0",
+    "rich>=14.0.0",
 ]
